--- a/.github/workflows/ci_test-conda.yml
+++ b/.github/workflows/ci_test-conda.yml
@@ -40,8 +40,9 @@ jobs:
     - name: Pull checkpoints from S3
       # todo: consider adding coma caching, but ATM all models have less then 100KB
       run: |
-        # todo: remove unzip install after new nigtly docker is created
         apt-get update -qq
+        apt-get install -y --reinstall ca-certificates
+        # todo: remove unzip install after new nigtly docker is created
         apt-get install -y --no-install-recommends unzip
         # enter legacy and update checkpoints from S3
         cd legacy
